--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,21 @@ font-family: 'Lora', serif;
 	background: #FFf;
 }
 body a,.grid_1,plan_1,plan_1.one,plan_1.two,i.icon1, i.icon2, i.icon3, i.icon4, i.icon5, i.icon6 {
-	transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
+	transition:0.2s all;
+	-webkit-transition:0.2s all;
+	-moz-transition:0.2s all;
+	-o-transition:0.2s all;
+	-ms-transition:0.2s all;
 }
 a:hover{
  text-decoration:none;
 }
 input[type="button"],input[type="submit"],li.parallelogram{
-	transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
+	transition:0.2s all;
+	-webkit-transition:0.2s all;
+	-moz-transition:0.2s all;
+	-o-transition:0.2s all;
+	-ms-transition:0.2s all;
 }
 h1,h2,h3,h4,h5,h6{
 	margin:0;			   
@@ -70,8 +70,8 @@ label{
   position: relative;
   -webkit-transition-property: color;
   transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
 }
 .hvr-sweep-to-bottom:before {
   content: "";
@@ -88,8 +88,8 @@ label{
   transform-origin: 50% 0;
   -webkit-transition-property: transform;
   transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
@@ -156,11 +156,11 @@ a.sign {
 	 color: #00B198;
 	text-decoration:none;
 	padding:30px 12px 31px;
-	transition:.5s all;
-	-webkit-transition:.5s all;
-	-moz-transition:.5s all;
-	-o-transition:.5s all;
-	-ms-transition:.5s all;
+	transition: 0.2s all;
+	-webkit-transition: 0.2s all;
+	-moz-transition: 0.2s all;
+	-o-transition: 0.2s all;
+	-ms-transition: 0.2s all;
 }
 .top-menu ul li.cap a{
 	text-decoration:none;
@@ -466,6 +466,9 @@ a.sign {
   font-weight:400;
   text-transform: uppercase;
   margin-bottom: 0.5em;
+}
+.story-grid h4 a {
+  color: #00B198;
 }
 .story-grid p {
   text-align: center;
@@ -803,11 +806,11 @@ h3.bars {
 	margin-right: 4%;
 	display: block;
 	background: #1A367D;
-	transition: all 0.5s ease-out;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+	transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 	width: 48%;
 	float: left;
 	margin-bottom: 10px;
@@ -962,11 +965,11 @@ color: #000;
 .reg_gp {
 	display: block;
 	background: #DD4B39;
-	transition: all 0.5s ease-out;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+	transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 	width: 48%;
 	float: left;
 	margin-bottom: 10px;
@@ -1054,11 +1057,11 @@ ul.contact-grids li i.icon12{
 }
 ul.contact-grids li i.icon11:hover,ul.contact-grids li i.icon12:hover,ul.contact-grids li i.icon13:hover,ul.contact-grids li i.icon14:hover{
 	opacity: 0.9;
-	transition: 0.5s ease;
-	-webkit-transition: 0.5s  ease;
-	-o-transition:0.5s all ease;
-	-moz-transition: 0.5s ease;
-	-ms-transition:0.5s  ease;
+	transition: 0.2s ease;
+	-webkit-transition: 0.2s  ease;
+	-o-transition:0.2s all ease;
+	-moz-transition: 0.2s ease;
+	-ms-transition:0.2s  ease;
 }
 ul.contact-grids li i.icon13{
 	background: url(../images/icons.png)no-repeat -192px 0px;
@@ -1068,11 +1071,11 @@ ul.contact-grids li i.icon14{
 }
 ul.contact-grids li i.icon14:hover{
 	opacity: 0.5;
-	transition: 0.5s ease;
-	-webkit-transition: 0.5s  ease;
-	-o-transition:0.5s all ease;
-	-moz-transition: 0.5s ease;
-	-ms-transition:0.5s  ease;
+	transition: 0.2s ease;
+	-webkit-transition: 0.2s  ease;
+	-o-transition:0.2s all ease;
+	-moz-transition: 0.2s ease;
+	-ms-transition:0.2s  ease;
 }
 ul.contact-grids {
 	padding: 0;
@@ -1087,11 +1090,11 @@ ul.contact-grids li{
 }
 li.contact-grid{
 	cursor: pointer;
-	transition: 0.5s ease;
-	-webkit-transition: 0.5s  ease;
-	-o-transition:0.5s all ease;
-	-moz-transition: 0.5s ease;
-	-ms-transition:0.5s  ease;
+	transition: 0.2s ease;
+	-webkit-transition: 0.2s  ease;
+	-o-transition:0.2s all ease;
+	-moz-transition: 0.2s ease;
+	-ms-transition:0.2s  ease;
 }
 li.contact-grid:hover {
 	opacity: 0.5;
