--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1220,6 +1220,9 @@ pre code {
   .col-md-offset-7 {
     margin-left: 58.33333333%;
   }
+  .col-md-offset-6-5 {
+    margin-left: 54.16666667%;
+  }
   .col-md-offset-6 {
     margin-left: 50%;
   }
@@ -1231,6 +1234,9 @@ pre code {
   }
   .col-md-offset-3 {
     margin-left: 25%;
+  }
+  .col-md-offset-2-5 {
+    margin-left: 20.83333333%;
   }
   .col-md-offset-2 {
     margin-left: 16.66666667%;
