--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,15 @@ a.sign {
   -ms-background-size: cover;
   min-height: 586px;
 }
+.banner.transparent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.banner.transparent .banner-navigation {
+  background-color: transparent;
+}
 .banner-navigation {
   background-color: #2F3338;
 }
@@ -548,22 +557,39 @@ margin-right:0%;
   min-height:400px;
 }
 .about-section {
+  background: url(../slideshow/466A7230.jpg) no-repeat center top;
+  background-size: cover;
   padding: 4em 0;
   text-align: center;
 }
-.about-section  h3{
+.about-section h3{
   font-family: 'Niconne', cursive;
   color: #00B198;
   font-size: 4em;
   font-weight: 400;
   text-align: center;
-    margin-bottom: 0.4em;
+  margin-bottom: 1em;
 }
 .about-section p {
   font-size: 0.9em;;
   line-height: 1.8em;
   color: #2F3338;
 }
+.story-box {
+  background-color: #ffffff;
+  border: 1px solid #666;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.3);
+  font-size: 1.25em;
+  margin-bottom: 5em;
+  padding: 1.5em 1.5em 2em;
+  border-radius: 1.5em 0 1.5em 0;
+}
+.story-box h4 {
+  font-family: 'Niconne', cursive;
+  font-size: 2em;
+  margin-bottom: 0.5em;
+}
+
 /*--people-section--*/
 .people-section{
   padding: 4em 0;
