--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,12 @@ label{
  font-weight:400;
 }
 
-/*-- banner --*/
+/*--banner--*/
+
 .form-control,.btn {
   border-radius: inherit !important;
 }
-/* Sweep To Bottom */
+/* sweep-to-bottom effect */
 .hvr-sweep-to-bottom {
   display: inline-block;
   vertical-align: middle;
@@ -224,7 +225,8 @@ a.sign {
     float:none;
   }
 }
-/*----start-home---*/
+
+/*--home--*/
 
 .banner-title {
   bottom: 0;
@@ -305,11 +307,9 @@ a.sign {
 	content: '';
   display: table;
 }
-
 .ch-grid:after {
 	clear: both;
 }
-
 .ch-grid li {
 	width:320px;
 	height:320px;
@@ -387,15 +387,12 @@ a.sign {
 	transform: rotate3d(0,1,0,180deg);
 	background: #079480;
 }
-
 .ch-img-1 { 
 	background-image: url(../images/w2.jpg);
 }
-
 .ch-img-2 { 
 	background-image: url(../images/w1.jpg);
 }
-
 .ch-info h4 {
   color: #fff;
   text-transform: uppercase;
@@ -408,7 +405,6 @@ a.sign {
   text-shadow: 0 0 1px #fff, 
   0 1px 2px rgba(0,0,0,0.3);
 }
-
 .ch-info h5 {
 	color: #fff;
 	padding: 10px 5px;
@@ -417,7 +413,6 @@ a.sign {
 	font-size: 18px;
 	border-top: 1px solid rgba(255,255,255,0.5);
 }
-
 .ch-info p a {
 	display: block;
 	color: #fff;
@@ -430,18 +425,15 @@ a.sign {
 	padding-top: 4px;
 	font-family: 'Open Sans', Arial, sans-serif;
 }
-
 .ch-info p a:hover {
 	color: #fff222;
 	color: rgba(255,242,34, 0.8);
 }
-
 .ch-item:hover .ch-info-wrap {
 	box-shadow: 
   0 0 0 0 rgba(255,255,255,0.8), 
   inset 0 0 3px rgba(115,114, 23, 0.8);
 }
-
 .ch-item:hover .ch-info {
 	-webkit-transform: rotate3d(0,1,0,-180deg);
 	-moz-transform: rotate3d(0,1,0,-180deg);
@@ -449,7 +441,9 @@ a.sign {
 	-ms-transform: rotate3d(0,1,0,-180deg);
 	transform: rotate3d(0,1,0,-180deg);
 }
-/*---story-grids--*/
+
+/*--story-grids--*/
+
 .story-section {
   padding: 4em 0;
   background-color: #eee;
@@ -485,7 +479,9 @@ a.sign {
   font-size: 0.9em;
   color: #2F3338;
 }
+
 /*--events--*/
+
 .event-section{
   padding: 4em 0 8em 0;
   text-align:center;
@@ -546,7 +542,9 @@ a.sign {
   color:#fff;
   display: block;
 }
+
 /*--about--*/
+
 .banner.two {
   background: url(../images/bg-two.jpg) no-repeat 0px 0px;
   background-size: cover;
@@ -598,6 +596,7 @@ a.sign {
 }
 
 /*--people-section--*/
+
 .people-section{
   padding: 4em 0;
   background: #eee;
@@ -647,509 +646,36 @@ a.sign {
 .people-text.two {
   text-align:left;
 }
-/*--trypography--*/
-.typrography {
-  padding:4em 0;
-}
-h3.type  {
-  font-family: 'Niconne', cursive;
-  color: #00B198;
-  font-size: 4em;
-  font-weight: 400;
-  text-align: center;
-}
-.grid_4{
-	background:#fff;
-	padding:2em 0em 0em 0em;
-}  
-.grid_5{
-	background:#fff;
-	padding:1em 0 2em 0;
-}
 
-.table td, .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-  padding: 15px!important;
-}
-.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-  font-size: 0.8em;
-  color: #999;
-}
-.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-  border-top: none !important;
-}
-.tab-content > .active {
-  display: block;
-  visibility: visible;
-}
-.label {
-  font-weight: 300 !important;
-  padding: 4px 6px;
-  border: none;
-  text-shadow: none;
-}
-h4.typ1{
-	margin-bottom:15px;
-}
-h5.typ1{
-	margin-bottom:15px;
-}
-.progress {
-  height: 8px;
-  box-shadow: none;
-}
-.progress {
-  overflow: hidden;
-  height: 20px;
-  margin-bottom: 20px;
-  background-color: #eeeeee;
-  border-radius: 2px;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-.progress-bar {
-  float: left;
-  width: 0%;
-  height: 100%;
-  font-size: 12px;
-  line-height: 20px;
-  color: #ffffff;
-  text-align: center;
-  background-color: #03a9f4;
-  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  -webkit-transition: width 0.6s ease;
-  -o-transition: width 0.6s ease;
-  transition: width 0.6s ease;
-}
-.progress-bar {
-  box-shadow: none;
-}
-.progress-bar-primary {
-  background-color: #03a9f4;
-}
-.progress-bar-info {
-  background-color: #00bcd4;
-}
-.progress-bar-success {
-  background-color: #8bc34a;
-}
-.progress-bar-warning {
-  background-color: #ffc107;
-}
-.progress-bar-danger {
-  background-color: #e51c23;
-}
-.progress-bar-inverse {
-  background-color: #757575;
-}
-.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
-  background-color: #5bb2fc; !important;
-  border-color: #5bb2fc;!important;
-}
-.grid_3 p,.page-header p {
-  color: #888;
-  font-size: 0.8em;
-  margin-bottom: 1em;
-  font-weight: 300;
-}
-.bs-docs-example {
-  margin: 1em 0;
-}
-section#tables  p {
-  margin-top: 1em;
-}
-.breadcrumb li{
-	font-size:0.85em;
-}
-.badge-primary {
-  background-color: #03a9f4;
-}
-.badge-success {
-  background-color: #8bc34a;
-}
-.badge-warning {
-  background-color: #ffc107;
-}
-.badge-danger {
-  background-color: #e51c23;
-}
-.tab-container .tab-content {
-  border-radius: 0 2px 2px 2px;
-  border: 1px solid #e0e0e0;
-  padding: 16px;
-  background-color: #ffffff;
-}
-.nav-tabs {
-  margin-bottom: 1em;
-}
-.alert {
-  font-size: 0.85em;
-}
-h1.t-button,h2.t-button,h3.t-button,h4.t-button,h5.t-button {
-  margin-top:0.5em;
-  margin-bottom: 0.5em;
-}
-h3.bars {
-  margin-bottom: 0.8em;
-}
-/*--moments--*/
-.moments-bottom {
-  margin-top: 2em;
-}
-.moments h3{
-  font-family: 'Niconne', cursive;
-  color: #00B198;
-  font-size: 4em;
-  font-weight: 400;
-  text-align: center;
-}
-.moments-left img{
-  width:100%;
-}
-.moments-left {
-  padding: 0 2px;
-  margin-bottom: 0.2em;
-}
-.moments {
-  padding: 4em 0;
-  text-align: center;
-}
-/*--sign-up---*/
-.signup-section {
-  padding: 4em 0;
-}
-.signup-section h3{
-  font-family: 'Niconne', cursive;
-  color: #00B198;
-  font-size: 4em;
-  font-weight: 400;
-  text-align: center;
-}
-.registration{
-	padding: 1.2% 0% 0 0;
-}
-.registration h2{
-	font-size: 2em;
-	color: #00405d;
-	text-transform: capitalize;
-	margin-bottom: 4%;
-	font-weight: 300;
-}
-.reg_fb {
-	margin-right: 4%;
-	display: block;
-	background: #1A367D;
-	transition: all 0.2s ease-out;
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-	width: 48%;
-	float: left;
-	margin-bottom: 10px;
-}
-.reg_fb img {
-	background:#1A367D;
-	padding: 8px;
-	float: left;
-	border-right:2px solid #07205F;
-}
-.reg_fb i {
-	color: #fff;
-	padding:5px 10px 0 0;
-	display: inline-block;
-	font-size: 1.1em;
-	text-transform: capitalize;
-	font-style: normal;
-}
-.require {
-	color: #F00;
-	font-size: 11px;
-}
-.cus_info_wrap label {
-	float: left;
-	display: block;
-	font-size:0.9em;
-	padding: 5px 0 0;
-}
-.cus_info_wrap {
-	margin-bottom: 15px;
-	padding: 0 25px;
-}
-.cus_info_wrap input[type="text"],.cus_info_wrap input[type="password"] {
-	width: 71%;
-	padding: 4px;
-	font-size: 13px;
-	font-weight: 400;
-	border:1px solid #D6D6D6;
-	outline:none;
-}
-.botton{
-  background: #00B198;
-  border-radius: 3px;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  cursor: pointer;
-  border: 0;
-  color: #fff;
-  font-weight:400;
-  height: 30px;
-  outline:none;
-  font-size: 14px;
-  text-transform: uppercase;
-  width: 80px!important;
-  text-align: center;
-}
-.botton1 :hover,.botton:hover{
-  background-color: #2F3338;
-}
-.labelTop.confirmpass {
-	margin-top: -9px;
-	line-height: 1;
-}
-.sign-up.text-center {
-	border: 1px solid #D6D6D6;
-	border-left:none;
-	padding: 2em 0 0 0;
-  min-height: 496px;
-}
-.sign-up h4{
-	margin-bottom:2em;
-}
-.forgetit a {
-  color: #000;
-  font-size: 16px;
-  display: block;
-  float: left;
-  margin-bottom: 0.5em;
-  text-decoration: none;
-}
-.forgetit input[type="text"] {
-  width: 81%;
-  padding: 7px;
-  font-size: 11px;
-  text-align: left;
-  font-weight: 400;
-  border: 1px solid #D6D6D6;
-  outline: none;
-  margin: 0px -4px 0 0;
-}
-.forgetit {
-	padding: 25px 5em 0 25px;
-	border-top: 1px solid #B6B6B6;
-	margin: 2em 0;
-}
-.sky-form {
+/*--big-event--*/
+
+.responsive-iframe {
+  height: 0px;
+  padding-bottom: 33.3333%;
   position: relative;
+  width: 100%;
 }
-.checkbox {
-  float: right;
-  position: relative;
-  font-size: 0.85em;
-  color: #555;
-  margin-top: -6px;
-  width: 97%;
-}
-.checkbox i {
+.responsive-iframe iframe {
+  height: 100%
+  left: 0px;
   position: absolute;
-  bottom: 3px;
-  left: 161px;
-  display: block;
-  width: 13px;
-  height: 13px;
-  outline: none;
-  border: 1px solid #ddd;
+  top: 0px;
+  width: 100%;
 }
-.checkbox input + i:after {
-	content: '';
-	background: url("../images/tick.png") no-repeat 1px 2px;
-	top: -3px;
-	left: -3px;
-	width: 15px;
-	height: 15px;
-	font: normal 12px/16px FontAwesome;
-	text-align: center;
-}
-.checkbox input + i:after {
-	position: absolute;
-	opacity: 0;
-	transition: opacity 0.1s;
-	-o-transition: opacity 0.1s;
-	-ms-transition: opacity 0.1s;
-	-moz-transition: opacity 0.1s;
-	-webkit-transition: opacity 0.1s;
-}
-.checkbox input {
-	position: absolute;
-	left: -9999px;
-}
-.checkbox input:checked + i:after {
-	opacity: 1;
-}
-.labelTop {
-	display: block;
-	font-weight: bold;
-	text-align: left;
-  color: #2C3E50;
-  float: left;
-  width: 29%;
-  font-weight: 400;
-}
-.reg_gp {
-	display: block;
-	background: #DD4B39;
-	transition: all 0.2s ease-out;
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-	width: 48%;
-	float: left;
-	margin-bottom: 10px;
-}
-.reg_gp img {
-	background:#DD4B39;
-	padding: 8px;
-	float: left;
-	border-right:2px solid #D14A3A;
-}
-.reg_gp i {
-  color: #fff;
-  padding:5px 24px 0 0;
-  display: inline-block;
-  font-size: 1.1em;
-  text-transform: capitalize;
-  font-style: normal;
-}
-.how_to p {
-  font-size: 14px;
-  font-weight: 300;
-  color: #000;
-  display: block;
-}
-.how_to p img {
-	margin: 0 2px 3px 0px;
-}
-.how_to {
-	background: #F8F8F8;
-	padding: 0.7em 2em;
-	border: 1px solid #D6D6D6;
-	margin: 15px 25px;
-}
-.form-list label {	
-	color: #000;
-	font-weight: bold;
-	position: relative;
-	z-index: 0;
-	display: inline-block;
-	padding-bottom: 5px;
-	margin-bottom: 0;
-}
-.sgn {
-	width: 100%;
-}
-.sgn input#is_subscribed {
-	float: left;
-	width: 2%;
-}
-.sgn label {
-	width: 50%;
-	margin-top: 6px;
-}
-.form-list li.control input.radio, .form-list li.control input.checkbox {
-	margin-right: 6px;
-}
-.main-container .radio, .main-container .checkbox {
-  display: inline-block;
-  margin-top: 0;
-}
-a.forgot {
-	font-size: 1em;
-	margin-right: 11px;
-}
+
 /*--contact--*/
-.contact{
+
+.rsvp{
   padding:4em 0;
 }
-.contact h3 {
+.rsvp h3 {
   font-family: 'Niconne', cursive;
   color: #00B198;
   font-size: 4em;
   font-weight: 400;
   text-align: center;
 }
-ul.contact-grids li i.icon11,ul.contact-grids li i.icon12,ul.contact-grids li i.icon13,ul.contact-grids li i.icon14{
-	width:50px;
-	height:50px;
-	background: url(../images/icons.png)no-repeat -91px 0px;
-	display: inline-block;
-	cursor: pointer;
-}
-ul.contact-grids li i.icon12{
-	background: url(../images/icons.png)no-repeat -142px 0px;
-}
-ul.contact-grids li i.icon11:hover,ul.contact-grids li i.icon12:hover,ul.contact-grids li i.icon13:hover,ul.contact-grids li i.icon14:hover{
-	opacity: 0.9;
-	transition: 0.2s ease;
-	-webkit-transition: 0.2s  ease;
-	-o-transition:0.2s all ease;
-	-moz-transition: 0.2s ease;
-	-ms-transition:0.2s  ease;
-}
-ul.contact-grids li i.icon13{
-	background: url(../images/icons.png)no-repeat -192px 0px;
-}
-ul.contact-grids li i.icon14{
-	background: url(../images/icons.png)no-repeat -241px 0px;
-}
-ul.contact-grids li i.icon14:hover{
-	opacity: 0.5;
-	transition: 0.2s ease;
-	-webkit-transition: 0.2s  ease;
-	-o-transition:0.2s all ease;
-	-moz-transition: 0.2s ease;
-	-ms-transition:0.2s  ease;
-}
-ul.contact-grids {
-	padding: 0;
-	text-align: center;
-	margin: 3% auto 3%;
-}
-ul.contact-grids li{
-  list-style: none;
-  display: inline-block;
-  width: 22%;
-  margin-right: 1%;
-}
-li.contact-grid{
-	cursor: pointer;
-	transition: 0.2s ease;
-	-webkit-transition: 0.2s  ease;
-	-o-transition:0.2s all ease;
-	-moz-transition: 0.2s ease;
-	-ms-transition:0.2s  ease;
-}
-li.contact-grid:hover {
-	opacity: 0.5;
-}
-ul.contact-grids h4{
-  color: #00B198;
-  text-align: center;
-  font-size: 1.2em;
-  font-weight: 400;
-  text-transform: uppercase;
-  margin:0.5em 0 0.5em 0;
-}
-ul.contact-grids h5{
-	text-align: center;
-  margin: 0em auto 0;
-  font-weight: 400;
-  font-size: 0.9em;
-  line-height: 1.8em;
-  color: #2F3338;
-}
-
-.contact-content input[type="text"],.contact-content  textarea {
+.rsvp-content input[type="text"],.rsvp-content  textarea {
   padding: 1.1em;
   width: 100%;
   margin: 1% 0% 0 0;
@@ -1166,11 +692,11 @@ ul.contact-grids h5{
   font-weight: 300;
   -webkit-appearance: none;
 }
-.contact-content  input[type="text"]:nth-child(2)
+.rsvp-content  input[type="text"]:nth-child(2)
 {
 	margin-right: 0em;
 }
-.contact-content form textarea{
+.rsvp-content form textarea{
 	resize:none;
 	height:170px;
 }
@@ -1178,7 +704,7 @@ ul.contact-grids h5{
 	text-align:center;
 	margin: 2% 0;
 }
-.contact-content input[type="submit"]{
+.rsvp-content input[type="submit"]{
   background:#00B198;
   color: #fff;
   font-weight: 500;
@@ -1196,18 +722,12 @@ ul.contact-grids h5{
   text-transform: uppercase;
   -webkit-appearance:none;
 }
-.contact-content  input[type="submit"]:hover{
+.rsvp-content input[type="submit"]:hover{
   background-color: #2F3338;
 }
-.contact iframe {
-  height: 400px;
-  border: none;
-  width:100%;
-  margin:2em 0 0em 0
-}
-
 
 /*--responsive--*/
+
 @media (max-width:1024px){
 	.banner.background {
 	  min-height:454px;
